<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/fondon"
    tools:context=".ui.perfil.PerfilFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/textView"
            android:layout_width="436dp"
            android:layout_height="96dp"
            android:background="@color/naranja"
            android:text=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="326dp"
            android:layout_height="409dp"
            android:background="@drawable/backgroundtxtnn"
            android:text=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.494"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.459" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/tperfil"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.024" />

        <EditText
            android:id="@+id/txtNombreU"
            android:layout_width="287dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bordertxtn"
            android:ems="10"
            android:fontFamily="casual"
            android:hint="@string/nomyape"
            android:textAlignment="center"
            android:textColor="@color/naranja"
            android:textColorHighlight="@color/naranja"
            android:textColorHint="@color/naranja"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.243" />

        <EditText
            android:id="@+id/txtIdentificacionU"
            android:layout_width="287dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bordertxtn"
            android:ems="10"
            android:fontFamily="casual"
            android:hint="@string/id"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/naranja"
            android:textColorHighlight="@color/naranja"
            android:textColorHint="@color/naranja"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.328" />

        <EditText
            android:id="@+id/txtFechaU"
            android:layout_width="287dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bordertxtn"
            android:ems="10"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:fontFamily="casual"
            android:hint="@string/fecha"
            android:inputType="none"
            android:textAlignment="center"
            android:textColor="@color/naranja"
            android:textColorHighlight="@color/naranja"
            android:textColorHint="@color/naranja"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.499" />


        <EditText
            android:id="@+id/TextGenero"
            android:layout_width="287dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/bordertxtn"
            android:clickable="true"
            android:focusable="false"
            android:fontFamily="casual"
            android:hint="Género"
            android:textAlignment="center"
            android:textColor="@color/naranja"
            android:textColorHighlight="@color/naranja"
            android:textColorHint="@color/naranja"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.585" />

        <EditText
            android:id="@+id/txtCorreoU"
            android:layout_width="287dp"
            android:layout_height="50dp"
            android:background="@drawable/bordertxtn"
            android:ems="10"
            android:fontFamily="casual"
            android:hint="@string/correo"
            android:inputType="textEmailAddress"
            android:textAlignment="center"
            android:textColor="@color/naranja"
            android:textColorHighlight="@color/naranja"
            android:textColorHint="@color/naranja"
            android:textSize="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.417" />

        <Button
            android:id="@+id/btnactualizar"
            android:layout_width="198dp"
            android:layout_height="68dp"
            android:backgroundTint="@color/naranja"
            android:fontFamily="casual"
            android:hint="@string/guardar"
            android:textColor="@color/blanco"
            android:textColorHighlight="@color/blanco"
            android:textColorHint="@color/blanco"
            android:textColorLink="@color/blanco"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.707" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="415dp"
            android:layout_height="56dp"
            android:background="@color/naranja"
            android:text=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.893" />

        <Button
            android:id="@+id/btnhistrorial"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="casual"
            android:text="@string/historico"
            android:textColor="@color/blanco"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.583"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.882" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>